Manifest /Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  # namespace: dev
  labels:
    app: k8s-frontend
spec:
  replicas: 1  # You can adjust the number of replicas as needed
  selector:
    matchLabels:
      app: k8s-frontend
  template:
    metadata:
      labels:
        app: k8s-frontend
    spec:
      containers:
      - name: k8s-frontend
        image: giangle197/todolist-fe 
        ports:
        - containerPort: 3001 
        # restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  # namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-backend
  template:
    metadata:
      labels:
        app: k8s-backend
    spec:
      containers:
      - name: k8s-backend
        image: giangle197/todolist-be
        resources:
          requests:
            cpu: 10m
        ports:
        - containerPort: 3000
        # restartPolicy: Always
