Manifest /service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-frontend-service
  # namespace: dev
spec:
  type: NodePort
  selector:
    app: k8s-frontend
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 3001
      nodePort: 30007
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-backend-service
  # namespace: dev
spec:
  type: NodePort
  selector:
    app: k8s-backend
  ports:
    - protocol: TCP
      port: 3333
      targetPort: 3000
      nodePort: 30008
