Manifest /ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  # namespace: dev
spec:
  rules:
  - host: biglabk8s.io
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: k8s-backend-service
            port:
              number: 3333
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-frontend-service
            port:
              number: 8888
